<resources>
    <string name="app_name">Countries</string>
    <string name="title_activity_country_detail">CountryDetailActivity</string>
    <string name="large_text">Hello
    </string>
    <string name="action_settings">Settings</string>
    <string name="label_native_name">Native Name :</string>
    <string name="label_region">Region</string>
    <string name="label_sub_region">Sub Region</string>
    <string name="label_population">Population</string>
    <string name="network_error_message">Please check your internet connection and try again</string>
</resources>
